set(FAKE_TARGET ${${PROJECT_NAME}_LOWER})

add_library(${FAKE_TARGET} INTERFACE)
target_include_directories(${FAKE_TARGET} SYSTEM INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:include/${CMAKE_CURRENT_SOURCE_DIR}>
  )
target_link_libraries(${FAKE_TARGET} INTERFACE
  dabcommon
  )
